@@ -2209,6 +2209,15 @@
       </component>
     </version>
   </module>
+  <module name="system-tray-applet">
+    <version release="gnome-2.0-extras">
+      <component name="system-tray-applet" dir="system-tray-applet">
+	<podir dir="po"/>
+	<potname name="system-tray-applet.pot"/>
+	<branch name="HEAD"/>
+      </component>
+    </version>
+  </module>
   <module name="think">
     <version release="gnome-1.4-extras">
       <component name="think" dir="think">
