@@ -1,3 +1,7 @@
+2002-09-29  Christian Neumair  <chris@gnome-de.org>
+
+	* translation-status.xml: Added system-tray-applet.
+
 2002-09-21  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Fixed branch for gconf.
